@@ -1,3 +1,9 @@
+2008-03-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* progmodes/verilog-mode.el (verilog-highlight-grouping-keywords):
+	Fix typo.
+	(verilog-type-font-keywords): Reindent.
+
 2008-03-03  Michael McNamara  <mac@mail.brushroad.com>
 
 	* verilog-mode.el (verilog-font-grouping-keywords): Fix bug in the
